--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
 
 
 
-
 .body {
     background-color: var(--backgroundGreen);
 }
@@ -19,10 +18,11 @@
     margin: -1% -.5% 0% -.6%; 
     padding: 2%;
     color: white;
-    border: solid black 5px;
+    border: solid var(--thirdColor) 5px;
     border-right: none;
     border-left: none;
 }
+
 
 .name {
     text-decoration: underline;
@@ -79,7 +79,5 @@ ul button:hover {
 
 
 
-p {
-    color: black;
-}
+
 
