--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,31 @@
     width: 170%;
 }
 
+.abtMe {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.disneyPic {
+    height: 80%;
+    width: 25%;
+    border: solid var(--navBarGreen) 4px;
+    border-radius: 50%;
+}
+
+.abtMeText {
+    width: 50%;
+    text-align: center;
+    margin-top: 5%;
+}
+
+.abtMePic {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+}
+
+
 
 
 
@@ -103,7 +128,7 @@ ul a:hover {
     color: #f7f8e4;
 }
 
-ul a:visited {
+ul a:active {
     color: var(--backgroundGreen);
     
 }
