--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
 .body {
     background-color: var(--backgroundGreen);
     color: var(--textColor);
+    background-image: url(https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=M3wxMjA3fDB8MXxzZWFyY2h8MTZ8fGJhY2tncm91bmQlMjBpbWFnZXxlbnwwfHx8fDE3MDQwNzI2MDN8MA&ixlib=rb-4.0.3) 
 }
 
 .nav1 {
@@ -55,6 +56,7 @@
 
 .subTitle {
     margin-top: 10%;
+    font-size: xx-large;
 }
 
 .imgWelcome {
@@ -67,6 +69,11 @@
     display: inline-block;
     padding: 2%;
     width: 170%;
+    margin-right: 6%;
+}
+
+.welPort p {
+    font-size: large;
 }
 
 .abtMe {
@@ -87,12 +94,19 @@
     margin-top: 5%;
 }
 
+
 .abtMePic {
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
 }
 
+.woodPic {
+    width: 100%;
+    height: 0%;
+    opacity: .3;
+    
+}
 
 
 
@@ -120,6 +134,7 @@ ul a {
     display: inline-block;
     margin-left: 2%;
     color: var(--thirdColor);
+    font-size: x-large;
 }
 
 
