commenting out the abtme section to add projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,8 +77,10 @@
 }
 
 .abtMe {
-    display: flex;
-    flex-direction: row-reverse;
+    display: block;
+    text-align: center;
+    font-size: x-large;
+    margin-top: 5%;
 }
 
 .disneyPic {
