--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,13 +116,15 @@
     width: 175%;
     margin-left: -90%;
     margin-top: 4%;
-    padding: 1%;
-    border: solid var(--thirdColor) 2px;
+    padding: 5%;
+    border: solid var(--thirdColor) 5px;
     border-radius: 15%;
 }
 
 .projectsContain div img:hover {
-    color: var(--backgroundGreen);
+    background-color: var(--backgroundGreen);
+    cursor: pointer; 
+    
 }
 
 .projectsContain div h2 {
